--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,9 +8,13 @@
 # https://github.com/Lokaltog/powerline-fonts
 #
 
-
-# remeber to set `alias tmux='tmux -2'` in your .bashrc then `source .bashrc`
 set -g default-terminal "screen-256color"
+
+set-window-option -g mode-keys vi
+
+set-option -g mouse on
+bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
+
 # Status update interval
 set -g status-interval 1
 
