--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,6 +15,13 @@ set-window-option -g mode-keys vi
 set-option -g mouse on
 bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
 
+setw -g mode-keys vi
+
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
 # Status update interval
 set -g status-interval 1
 
