--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,6 +14,8 @@ set-window-option -g mode-keys vi
 
 set-option -g mouse on
 bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
+bind C-c run " tmux save-buffer - | xclip -i -sel clipboard"
+bind C-v run " tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
 
 setw -g mode-keys vi
 
