更新tmux 和 .zshrc配置

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,9 @@ set -g default-terminal "screen-256color"
 
 set-window-option -g mode-keys vi
 
+# 以便能够在电脑重启之后重新开启之前的tmux
+run-shell ~/.tmux/tmux-resurrect/resurrect.tmux
+
 set-option -g mouse on
 bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
 bind C-c run " tmux save-buffer - | xclip -i -sel clipboard"
