更改tmux使得命名后不再更改window name

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,6 +9,8 @@
 #
 
 set -g default-terminal "screen-256color"
+# 设置名称之后就不再更改
+set-option -g allow-rename off
 
 set-window-option -g mode-keys vi
 
